@@ -1,5 +1,10 @@
 2004-12-22 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
 
+	* watchquagga.c: Try for gcc 2.95 compatibility (avoid %z and a tricky
+	  initialization).
+
+2004-12-22 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
+
 	* watchquagga.c: Add -b option to circumvent difficulties passing
 	  embedded spaces in command-line arguments.  This is an ugly hack,
 	  we should probably use a config file instead.
